...
    private var pendingBetSizeSnapshot: Int = 0
    private let startingBalance: Int = 200
    private var gameplayMetrics = GameplayMetrics()
    private var hasBeenSaved: Bool = false // Track if session was already saved (e.g., on background)

    private var chipSelector: ChipSelector!
    private var passLineControl: PlainControl!
    private var passLineOddsControl: PlainControl!
    private var passLineControlWidthConstraint: NSLayoutConstraint!
    private var passLineOddsControlWidthConstraint: NSLayoutConstraint!
    private var passLineOddsControlLeadingConstraint: NSLayoutConstraint!
    private var fieldControl: PlainControl!
    private var pointStack: PointStack!
    private var flipDiceContainer: FlipDiceContainer!
    private var balanceView: BalanceView!
    private var instructionLabel: InstructionLabel!
    private var hardwayView: QuadBetView!
    private var hornView: QuadBetView!
    private var betsScrollView: UIScrollView!
    private var pageControl: UIPageControl!
    private var betsContainerView: UIView!
    private var bottomStackView: UIStackView!
    private var topStackView: UIStackView!
    private var currentBetView: CurrentBetView!
    private var playstyleView: UIView!
    private var playstyleLabel: UILabel!
    private var bankrollLabel: UILabel!
    private var showPlaystyle: Bool = false
    private var topStackTopConstraint: NSLayoutConstraint!
    private var game = CrapsGame()
...
