...

      stack.addArrangedSubview(horizontalStack)

      horizontalStack.heightAnchor.constraint(equalToConstant: 55).isActive = true

    case .baccarat:
      let newGameButton = NNPrimaryLabeledButton(title: "New Game")
      newGameButton.addTarget(self, action: #selector(baccaratNewGameTapped), for: .touchUpInside)
      stack.addArrangedSubview(newGameButton)
      newGameButton.heightAnchor.constraint(equalToConstant: 55).isActive = true

    case .craps:
      let newGameButton = NNPrimaryLabeledButton(title: "New Game")
...
